# RayTracer

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
apps/playground/: main.cpp
apps/renderer/: example.json  main.cpp  scene_parser.cpp  scene_parser.h
src/: CMakeLists.txt  aabb.cpp  aabb.h  camera.cpp  camera.h  hittable.cpp  hittable.h  image_dumper.cpp  image_dumper.h  infinity.h  interval.h  main.cpp  material.cpp  material.h  onb.h  rand.cpp  rand.h  ray.cpp  ray.h  ray_tracer.cpp  ray_tracer.h  texture.cpp  texture.h  vec.cpp  vec.h  vec3.cpp  vec3.h
src/hittable/: bvh_node.cpp  bvh_node.h  hittable.h  hittable_list.cpp  hittable_list.h  model.cpp  model.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
tests/: CMakeLists.txt  main.cpp
tests/hittable/: sphere_tests.cpp  triangle_tests.cpp
